# serverless_csv_processing

./: Cargo.toml  Makefile  README.md
deployment/: eventbridge-template.yml  lambda-template.yml  s3-template.yml
src/: lib.rs
src/aws/: client.rs
src/dtos/: mod.rs  record.rs  s3_event.rs
