[package]
name = "rust-csv-processig"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "handler"
path = "src/bin/handler.rs"

[dependencies]
aws-config = "0.54"
aws-sdk-s3 = "0.24"
lambda_runtime = "0.7"
serde_json = "1.0.68"
serde = {version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["macros"] }
tokio-stream = "0.1"
csv = "1.2"
csv-async = { version = "1.2", features = ["tokio"] }
tracing-subscriber = { version = "0.3", features = ["fmt", "json"] }
aws_lambda_events = { version = "0.7", default-features = false, features = ["s3"] }

